--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       }
 
       .panel {
+        position: relative;
         background: #6b0f9c;
         box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
         color: white;
@@ -147,16 +148,14 @@
       const panels = document.querySelectorAll(".panel");
 
       panels.forEach((panel) => {
-        panel.addEventListener("mouseover", function openPanel() {
-          let isOpen = panel.classList.contains("open");
+        const middleText = panel.querySelector("p:nth-child(2)");
 
-          panels.forEach((panel) => panel.classList.remove("open"));
+        middleText.addEventListener("mouseover", function openPanel() {
+          panel.classList.add("open");
+        });
 
-          if (isOpen === false) {
-            panel.classList.add("open");
-          } else {
-            panel.classList.remove("open");
-          }
+        panel.addEventListener("mouseleave", function closePanel() {
+          panel.classList.remove("open");
         });
       });
     </script>
