add transition delay

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       .panel.open p:first-child,
       .panel.open p:last-child {
         transform: translateY(0%);
+        transition-delay: 150ms;
       }
     </style>
 
